syntax = "proto3";

package pb;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/2landhnal/digital-preservation-shared-payload/pb";

message UpdateTmpObjectRequest {
  string objectId = 1;
  string status = 2;
}

message UpdateTmpObjectResponse {
  string message = 1;
}

message CreateTmpObjectRequest {
  string objectId = 1;
  string uploaderEmail = 2;
  int64 folderId=3;
  string originalFilename = 4;
  string storageFilename = 5;
}

message CreateTmpObjectResponse {
  string objectId = 1;
  string uploaderEmail = 2;
  int64 folderId=3;
  string originalFilename = 4;
  string storageFilename = 5;
  string status = 6;
  google.protobuf.Timestamp createdAt = 7;
  google.protobuf.Timestamp updatedAt = 8;
  int64 id = 9;
}

